# POO-tp

./: CMakeLists.txt  Continente.cpp  Continente.h  Ilha.cpp  Ilha.h  Imperio.cpp  Imperio.h  Interface.cpp  Interface.h  Mundo.cpp  Mundo.h  POO tp.lnk  README.md  main.cpp  tecnologias.cpp  tecnologias.h  territorio.cpp  territorio.h  territorios.txt
